Fixing the spacing as described in #252

--- a/app/templates/ui/styles/main.less
+++ b/app/templates/ui/styles/main.less
@@ -245,7 +245,9 @@ form[name=profileForm] {
   color: @gray-lighter;
   font-weight: bold;
   padding: 0 2px 2px 2px;
+  margin: 0;
 }
+
 .nav-pills {
   margin-bottom: 15px;
 }
